--- a/PT Q&A/index.html
+++ b/PT Q&A/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css"> <!-- Link to your external CSS file -->
+    
+
 </head>
 <body>
     <h1>Login</h1>
@@ -15,6 +17,11 @@
         <input type="password" id="password" name="password" required><br><br>
         <button type="submit">Login</button>
         <p id="message"></p>
+        <p>
+            <a id="forgot-password" href="forgot_password.html">Forgot Password</a>
+            <br>
+            <a id="create-account" href="create_account.html">Create New Account</a>
+        </p>
     </form>
     <script src="script.js"></script>
 </body>
