--- a/home/pt_mcqs.html
+++ b/home/pt_mcqs.html
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- Your HTML header content here -->
+    <style>
+        /* Style for the icon container */
+        .icon-container {
+            display: flex;          /* Display icons in a row */
+            justify-content: space-between; /* Create space between icons */
+            align-items: center;     /* Align icons vertically */
+        }
+
+        /* Add CSS to style the icons */
+        .icon {
+            margin: 1em;    /* Add space between icons */
+        }
+
+        .icon img {
+            width: 70px;
+            height: 70px;
+        }
+    </style>
 </head>
 <body>
     <h1>PT MCQs</h1>
     <div class="icon-container">
         <div class="icon">
             <a href="pt_mcqs_recommended.html">
-                <img src="recommended_icon.png" alt="Recommended">
+                <img src="recommended.jpeg" alt="Recommended">
                 <p>Recommended</p>
             </a>
         </div>
 
         <div class="icon">
             <a href="pt_mcqs_all_topics.html">
-                <img src="all_topics_icon.png" alt="All Topics">
+                <img src="all topics.jpeg" alt="All Topics">
                 <p>All Topics</p>
             </a>
         </div>
 
         <div class="icon">
             <a href="pt_mcqs_random_exam.html">
-                <img src="random_exam_icon.png" alt="Random Exam">
+                <img src="random.jpeg" alt="Random Exam">
                 <p>Random Simulating Exam</p>
             </a>
         </div>
