--- a/home/forgot_password.html
+++ b/home/forgot_password.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Other meta tags, links, and styles -->
 <head>
     <title>Forgot Password</title>
     <!-- Include any necessary styles or links to CSS here -->
