--- a/home/pt_mcqs_all_topics.html
+++ b/home/pt_mcqs_all_topics.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>All TOPICS</title>
+    <!-- Other meta tags, links, and styles -->
 <head>
     <style>
         /* Add your CSS styles here */
@@ -31,7 +36,7 @@
     <div class="icon-container">
         <!-- Icon 1 -->
         <div class="icon">
-            <a href="topic1.html">
+            <a href="hematology.html">
                 <img src="blood.jpeg" alt="Topic 1">
                 <p>hematology</p>
             </a>
