--- a/home/dashboard.html
+++ b/home/dashboard.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>Dashboard</title>
 <head>
     <style>
         /* Add CSS to style the icon */
