--- a/home/index.html
+++ b/home/index.html
@@ -4,25 +4,27 @@
     <title>Login</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css"> <!-- Link to your external CSS file -->
-    
-
+    <link rel="stylesheet" type="text/css" href="styleindex.css">
 </head>
 <body>
-    <h1>Login</h1>
-    <form id="login-form">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br><br>
-        <button type="submit">Login</button>
-        <p id="message"></p>
-        <p>
-            <a id="forgot-password" href="forgot_password.html">Forgot Password</a>
-            <br>
-            <a id="create-account" href="create_account.html">Create New Account</a>
-        </p>
-    </form>
+    <div class="container">
+        <h1>Login</h1>
+        <form id="login-form">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            <br><br>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            <br><br>
+            <button type="submit">Login</button>
+            <p id="message"></p>
+            <p>
+                <a id="forgot-password" href="forgot_password.html">Forgot Password</a>
+                <br>
+                <a id="create-account" href="create_account.html">Create New Account</a>
+            </p>
+        </form>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
