--- a/home/index.html
+++ b/home/index.html
@@ -25,6 +25,6 @@
             </p>
         </form>
     </div>
-    <script src="script.js"></script>
+    <script src="scriptindex.js"></script>
 </body>
 </html>
