--- a/home/pt_mcqs_all_topics.html
+++ b/home/pt_mcqs_all_topics.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All TOPICS</title>
     <!-- Other meta tags, links, and styles -->
-<head>
     <style>
         /* Add your CSS styles here */
+        /* Define styles for the container */
+        .container {
+            text-align: center;
+            background-color: #000000; /* Blue color, change as needed */
+            color: rgba(4, 42, 255, 0.932); /* White text, change as needed */
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+
         /* Define styles for the icon container and icons */
         .icon-container {
             display: flex;
+            background-color: rgb(106, 128, 61);
             flex-wrap: wrap; /* Allow icons to wrap to the next line */
             justify-content: space-between;
         }
@@ -32,28 +41,27 @@
     </style>
 </head>
 <body>
-    <h1>PT MCQs - All Topics</h1>
+    <div class="container">
+        <h1>PT MCQs - All Topics</h1>
+    </div>
     <div class="icon-container">
-        <!-- Icon 1 -->
+
         <div class="icon">
             <a href="hematology.html">
                 <img src="blood.jpeg" alt="Topic 1">
-                <p>hematology</p>
+                <p>HEMATOLOGY</p>
             </a>
         </div>
 
-        <!-- Icon 2 -->
         <div class="icon">
-            <a href="topic2.html">
-                <img src="icon2.jpg" alt="Topic 2">
-                <p>Topic 2</p>
+            <a href="dermatology.html">
+                <img src="skin.jpeg" alt="Topic 2">
+                <p>DERMATOLOGY</p>
             </a>
         </div>
 
-        <!-- Add more icons here, similar to the above structure -->
-        <!-- Continue until you have 30 icons -->
 
-        <!-- Back button icon -->
+
         <div class="icon">
             <a href="pt_mcqs.html">
                 <img src="back.jpeg" alt="Back">
