--- a/home/10mcqshema.html
+++ b/home/10mcqshema.html
@@ -9,6 +9,7 @@
 <body>
     <div class="app">
         <h1>HEMATOLOGY</h1>
+        <a href="hematology.html"><button class="quit-btn">Quit</button></a>
         <div class="quiz">
             <h2 id="question">Question goes here</h2>
             <div id="answer-buttons">
@@ -17,6 +18,7 @@
                 <button class="btn">Answer 3</button>
                 <button class="btn">Answer 4</button>
             </div>
+            <p id="explanation"></p>
             <button id="next-btn">next</button>
         </div>
     </div>
