--- a/home/dermatology.html
+++ b/home/dermatology.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HEMATOLOGY</title>
+    <title>DERMATOLOGY</title>
 
     <!-- Other meta tags, links, and styles -->
     <style>
@@ -11,7 +11,7 @@
         /* Style for the blue box */
         .blue-box {
             background-color: #1961c7; /* Blue color, change as needed */
-            color: rgb(235, 56, 11); /* White text, change as needed */
+            color: rgb(120, 123, 77); /* White text, change as needed */
             text-align: center;
             padding: 20px;
             margin-bottom: 20px;
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="blue-box">
-        <h1>HEMATOLOGY</h1>
+        <h1>DERMATOLOGY</h1>
     </div>
 
     <div class="icon-container">
@@ -83,4 +83,3 @@
     </div>
 </body>
 </html>
-
